Bug 366415 - circular dependency introduced in e5fa5cb
Summary: circular dependency introduced in e5fa5cb
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kglobalaccel
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Flöser
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-04 16:28 UTC by Antonio Rojas
Modified: 2016-08-05 10:36 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2016-08-04 16:28:21 UTC
Commit e5fa5cb added a dependency on kio, which creates a circular dependency kglobalaccel -> kio -> kbookmarks -> kxmlgui -> kglobalaccel. Since all interdependencies are versioned, this will make it impossible to compile any of these packages.

Reproducible: Always
Comment 1 Marco Martin 2016-08-05 10:36:01 UTC
Git commit b2375f1a8722632630f1e5d72d96c401c5675318 by Marco Martin.
Committed on 05/08/2016 at 10:34.
Pushed by mart into branch 'master'.

use klauncher dbus instead of KRun

can't depend from KIO, use alternate ways to lauch aplications
reviewed-by: Martin Gräßlin <mgraesslin@kde.org>

M  +0    -1    CMakeLists.txt
M  +0    -1    src/runtime/CMakeLists.txt
M  +56   -13   src/runtime/kserviceactioncomponent.cpp

http://commits.kde.org/kglobalaccel/b2375f1a8722632630f1e5d72d96c401c5675318