use klauncher dbus instead of KRun

can't depend from KIO, use alternate ways to lauch aplications
BUG:366415
reviewed-by: Martin Gräßlin <mgraesslin@kde.org>